<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailNewsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        <ImageView
            android:id="@+id/ivImageDetail"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:src="@color/grey"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/news_title"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ivImageDetail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ibFavorite"/>

        <ImageButton
            android:id="@+id/ibFavorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_favorite_border_red"
            android:background="@color/white"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvTitle"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/tv_published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/published"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_author_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_published"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_published"
            app:layout_constraintStart_toEndOf="@id/tv_author_title"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_source_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/source_"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_author"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tv_source"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/source"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:layout_marginStart="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_author"
            app:layout_constraintStart_toEndOf="@id/tv_source_title"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_overview_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/black2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_source"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/text_color"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_read_full"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:text="@string/read_full"
            android:textColor="@color/black2"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_overview"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>